# email-triage-env

./: .dockerignore  Dockerfile  README.md  __init__.py  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
